--- a/Front/package.json
+++ b/Front/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
