--- a/Front/package.json
+++ b/Front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
