--- a/Front/package.json
+++ b/Front/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
