--- a/Front/package.json
+++ b/Front/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.69.5"
   },
